--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,99 +1,17 @@
 <div class="courses-containers">
   <div class="courses-list">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          Course List
-        </mat-card-title>
-      </mat-card-header>
-      <mat-card-content>
-        <mat-list>
-          <mat-list-item
-            *ngFor="let course of courses"
-            (click)="selectCourse(course)"
-          >
-            <h3 matLine>{{ course.title }}</h3>
-            <p matLine>{{ course.description }}</p>
-            <button
-              mat-icon-button
-              color="warn"
-              (click)="
-                deleteCourse(course.id); $event.stopImmediatePropagation()
-              "
-            >
-              <mat-icon>delete</mat-icon>
-            </button>
-          </mat-list-item>
-        </mat-list>
-      </mat-card-content>
-    </mat-card>
+    <app-courses-list
+      [courses]="courses"
+      (selected)="selectCourse($event)"
+      (deleted)="deleteCourse($event)"
+    ></app-courses-list>
   </div>
 
   <div class="course-details">
-    <mat-card>
-      <mat-card-header>
-        <mat-card-title>
-          <span *ngIf="selectedCourse.id; else noSelection">{{selectedCourse.title}}</span>
-          <ng-template #noSelection>Select Course</ng-template>
-        </mat-card-title>
-      </mat-card-header>
-      <form #form="ngForm" (submit)="saveCourse(selectedCourse)">
-        <mat-card-content>
-          <mat-form-field class="full-width">
-            <input
-              matInput
-              [(ngModel)]="selectedCourse.title"
-              type="text"
-              name="title"
-              placeholder="title"
-              required
-            />
-          </mat-form-field>
-          <mat-form-field class="full-width">
-            <input
-              matInput
-              [(ngModel)]="selectedCourse.description"
-              name="description"
-              placeholder="description"
-            />
-          </mat-form-field>
-          <section>
-            <h4>{{ selectedCourse.percentComplete }}% Complete</h4>
-            <mat-slider
-              class="full-width"
-              max="100"
-              min="0"
-              step="1"
-              thumbLabel
-              [displayWith]="formatLabel"
-              name="percentComplete"
-              [(ngModel)]="selectedCourse.percentComplete"
-            >
-            </mat-slider>
-          </section>
-          <section>
-            <mat-checkbox
-              name="favorite"
-              [(ngModel)]="selectedCourse.favorite"
-              color="primary"
-              >Favorite</mat-checkbox
-            >
-          </section>
-        </mat-card-content>
-        <mat-card-actions>
-          <button type="button" mat-button (click)="cancel()">cancel</button>
-          <button
-            type="submit"
-            mat-button
-            [disabled]="form.invalid"
-            color="primary"
-          >
-            submit
-          </button>
-        </mat-card-actions>
-      </form>
-      <pre>{{ form.value | json }}</pre>
-      <pre>{{ form.valid | json }}</pre>
-    </mat-card>
+    <app-course-details
+      [course]="selectedCourse"
+      (saved)="saveCourse($event)"
+      (cancelled)="cancel()"
+    ></app-course-details>
   </div>
 </div>
