--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,29 +1,6 @@
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      {{ title }}
-    </mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <mat-list>
-      <mat-list-item
-        *ngFor="let lesson of courseLessons"
-        (click)="selectLesson(lesson)"
-      >
-        {{ lesson.title }}
-      </mat-list-item>
-    </mat-list>
-  </mat-card-content>
-</mat-card>
+<app-lessons-list
+  [lessons]="courseLessons"
+  (selected)="selectLesson($event)">
+</app-lessons-list>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>Debug</mat-card-title>
-  </mat-card-header>
-  <mat-card-content>
-    <span *ngIf="currentLesson; else elseBlock">{{
-      currentLesson | json
-    }}</span>
-    <ng-template #elseBlock>Select a lesson</ng-template>
-  </mat-card-content>
-</mat-card>
+<pre>{{currentLesson | json}}</pre>
